# gnu-apl

./: .apl.history  .gitignore  AUTHORS  Doxyfile  INSTALL  Makefile.am  Makefile.incl  README-1-prerequisites  README-10-python  README-11-bogus-compiler-warnings  README-12-vpath-builds  README-3-keyboard  README-5-WINDOWS  README-6-porting  README-7-more-info  README-8-parallel  README-9-post-installation  aclocal.patch  config.h  config.h.in  configure  configure.ac  dynamic_lookup-11.patch  gnu-apl_1.8.orig.tar.xz.delta  gnu-apl_1.8.orig.tar.xz.id  gnu-apl_1.9.orig.tar.xz.delta  gnu-apl_1.9.orig.tar.xz.id  gnu-apl_2.0.orig.tar.xz.delta  gnu-apl_2.0.orig.tar.xz.id  x
trunk/: AUTHORS  Doxyfile  Makefile.am  Makefile.in  Makefile.incl  README-1-prerequisites  README-10-python  README-13-build-pitfalls  README-2-configure  README-3-keyboard  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  exported_from  libtool
trunk/Claude/: CLAUDE.md  Makefile.am  Makefile.in
trunk/HOWTOs/: APL-Communication-Cookbook.asciidoc  APL-Communication-Cookbook.html  GNU-APL-Designers-Guide.asciidoc  GNU-APL-Designers-Guide.html  GNU-APL-Memory-Management.asciidoc  GNU-APL-Memory-Management.html  GNU-APL-Performance.asciidoc  GNU-APL-Performance.html  GNU-APL-Programming-Style-Guide.md  GNU-APL-Troubleshooting.asciidoc  GNU-APL-Troubleshooting.html  GNU-APL-Windows-11.asciidoc  GNU-APL-Windows-11.html  LApack-primer.asciidoc  LApack-primer.html  Makefile  Makefile.am  Makefile.in  Parallel-APL.asciidoc  Parallel-APL.html  Quad-GTK.asciidoc  Quad-GTK.html  Tips-For-Mainatiners.asciidoc  Tips-For-Mainatiners.html
trunk/autom4te.cache/: output.1  output.2  requests  traces.0  traces.2
trunk/debian/: Makefile  Makefile.in  changelog  control
trunk/doc/: Makefile  Makefile.am  Makefile.in  apl-info.css  apl.html  apl.info  apl.texi  libapl.html  libapl.info  libapl.texi
trunk/erlang/: Makefile  Makefile.am  Makefile.in  erlang_APL_nif.c
trunk/gnu-apl.d/: Makefile  Makefile.in  keyboard1.txt  preferences  preferences.in
trunk/html/: APL__Float__as__class_8hh.html  APL__Float__as__class_8hh.js  APL__Float__as__class_8hh_a04b7d603c7db24af0a106192478fba20_cgraph.map  APL__Float__as__class_8hh_a04b7d603c7db24af0a106192478fba20_cgraph.md5  APL__Float__as__class_8hh_a04b7d603c7db24af0a106192478fba20_icgraph.map  APL__Float__as__class_8hh_a04b7d603c7db24af0a106192478fba20_icgraph.md5  APL__Float__as__class_8hh_a0919f6501e1d5dfb7df99984eceb9d7c_icgraph.map  APL__Float__as__class_8hh_a0919f6501e1d5dfb7df99984eceb9d7c_icgraph.md5  APL__Float__as__class_8hh_a0ce03c3fc905473db859df9f785a5a73_icgraph.map  APL__Float__as__class_8hh_a0ce03c3fc905473db859df9f785a5a73_icgraph.md5  APL__Float__as__class_8hh_a11d698fa254ac8c97ddd741e415c127c_icgraph.map  APL__Float__as__class_8hh_a11d698fa254ac8c97ddd741e415c127c_icgraph.md5  APL__Float__as__class_8hh_a1823fc1825d017fe92820a6fefca1922_icgraph.map  APL__Float__as__class_8hh_a1823fc1825d017fe92820a6fefca1922_icgraph.md5  APL__Float__as__class_8hh_a2e6bfcfd972feef09c90603b38988a1d_icgraph.map  APL__Float__as__class_8hh_a2e6bfcfd972feef09c90603b38988a1d_icgraph.md5  APL__Float__as__class_8hh_a33081d9f61033e78191bddc96e263cc9_cgraph.map  APL__Float__as__class_8hh_a33081d9f61033e78191bddc96e263cc9_cgraph.md5  APL__Float__as__class_8hh_a33081d9f61033e78191bddc96e263cc9_icgraph.map  APL__Float__as__class_8hh_a33081d9f61033e78191bddc96e263cc9_icgraph.md5  APL__Float__as__class_8hh_a382deaecbcb25520d8ac7dc9f1e1ed44_icgraph.map  APL__Float__as__class_8hh_a382deaecbcb25520d8ac7dc9f1e1ed44_icgraph.md5  APL__Float__as__class_8hh_a39a559918830630a7e07f1ab36fb289c_icgraph.map  APL__Float__as__class_8hh_a39a559918830630a7e07f1ab36fb289c_icgraph.md5  APL__Float__as__class_8hh_a5901d5ca4f24f84995314e5edbfdb44a_cgraph.map  APL__Float__as__class_8hh_a5901d5ca4f24f84995314e5edbfdb44a_cgraph.md5  APL__Float__as__class_8hh_a5901d5ca4f24f84995314e5edbfdb44a_icgraph.map  APL__Float__as__class_8hh_a5901d5ca4f24f84995314e5edbfdb44a_icgraph.md5  APL__Float__as__class_8hh_a694117ee0bf9d87b98a1d953aafbe85c_cgraph.map  APL__Float__as__class_8hh_a694117ee0bf9d87b98a1d953aafbe85c_cgraph.md5  APL__Float__as__class_8hh_a694117ee0bf9d87b98a1d953aafbe85c_icgraph.map  APL__Float__as__class_8hh_a694117ee0bf9d87b98a1d953aafbe85c_icgraph.md5  APL__Float__as__class_8hh_a72c111ec33a47312ffc9382d92d06098_icgraph.map  APL__Float__as__class_8hh_a72c111ec33a47312ffc9382d92d06098_icgraph.md5  APL__Float__as__class_8hh_a7a27f48085739f3bdff2fe4485895a46_icgraph.map  APL__Float__as__class_8hh_a7a27f48085739f3bdff2fe4485895a46_icgraph.md5  APL__Float__as__class_8hh_a7e7be0f9928842e8953e912740a33c57_icgraph.map  APL__Float__as__class_8hh_a7e7be0f9928842e8953e912740a33c57_icgraph.md5  APL__Float__as__class_8hh_a83d150e612ac074d741cc2c66c48b95c_icgraph.map  APL__Float__as__class_8hh_a83d150e612ac074d741cc2c66c48b95c_icgraph.md5  (+14711 more)
trunk/m4/: apl_TARGETs.m4  apl_sugar.m4  ax_lib_postgresql.m4  ax_lib_sqlite3.m4  ax_path_lib_gsl.m4  check_FFT.m4  check_GSL.m4  check_GTK.m4  check_PCRE.m4  check_PNG.m4  check_POSTGRES.m4  check_X11.m4  libtool.m4
trunk/rpm/: Makefile  Makefile.am  Makefile.in  apl.spec  apl.spec.in
trunk/src/: .Cmd_KEYB.cc.swp  APL_Float_as_class.hh  APL_enums.hh  APL_types.hh  Archive.cc  Archive.hh  ArrayIterator.hh  Assert.cc  Assert.hh  Avec.cc  Avec.def  Avec.hh  Backtrace.cc  Backtrace.hh  Bif_F12_COMMA.cc  Bif_F12_COMMA.hh  Bif_F12_DOMINO.cc  Bif_F12_DOMINO.hh  Bif_F12_FORMAT.cc  Bif_F12_FORMAT.hh  Bif_F12_INDEX_OF.cc  Bif_F12_INDEX_OF.hh  Bif_F12_INTERVAL_INDEX.cc  Bif_F12_INTERVAL_INDEX.hh  Bif_F12_PARTITION_PICK.cc  Bif_F12_PARTITION_PICK.hh  Bif_F12_SORT.cc  Bif_F12_SORT.hh  Bif_F12_TAKE_DROP.cc  Bif_F12_TAKE_DROP.hh  Bif_OPER1_COMMUTE.cc  Bif_OPER1_COMMUTE.hh  Bif_OPER1_EACH.cc  Bif_OPER1_EACH.hh  Bif_OPER1_REDUCE.cc  Bif_OPER1_REDUCE.hh  Bif_OPER1_SCAN.cc  Bif_OPER1_SCAN.hh  Bif_OPER2_INNER.cc  Bif_OPER2_INNER.hh  (+252 more)
trunk/support-files/: Makefile  Makefile.am  Makefile.in  apl.vim
trunk/tools/: .Makefile.am.swp  .apl.history  APL_keyboard  APL_keyboard.cc  (+26 more)
(+754 files in other folders)
